# windy-lang

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: deploy.yml  release.yml
docs/: esolangs-wiki.md
src/: grid.rs  lib.rs  main.rs  vm.rs
web/: index.html
