[package]
name = "windy-lang"
version = "2.3.1"
edition = "2021"
rust-version = "1.75"
description = "Windy — a 2D esoteric programming language where code flows like wind."
authors = ["Kim Sangkeun (sisobus) <windy@classum.com>"]
homepage = "https://windy.sisobus.com"
repository = "https://github.com/sisobus/windy"
documentation = "https://github.com/sisobus/windy/blob/main/SPEC.md"
readme = "README.md"
license = "MIT"
keywords = ["esolang", "esoteric", "interpreter", "2d", "stack-based"]
categories = ["command-line-utilities", "compilers"]
# Patterns are gitignore-style, so leading `/` anchors to the package
# root — without it, `README.md` would also pull in web/README.md and
# any nested README files.
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/SPEC.md",
    "/src/**/*.rs",
    "/examples/*.wnd",
    "/conformance/cases.json",
    "/conformance/v1.json",
    "/tests/conformance.rs",
    "/tests/conformance_v1.rs",
]

[lib]
name = "windy"
path = "src/lib.rs"
# `cdylib` is required for wasm-bindgen to produce a browser-loadable module.
# `rlib` keeps the native CLI binary + integration tests working.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "windy"
path = "src/main.rs"

[features]
# Off by default — adds zero overhead to the conforming interpreter.
# Turn on for downstream tooling (e.g. windy-coin's mining-policy guest)
# that needs runtime metrics about an executed program. See
# `vm::VmMetrics` and `Grid::{total_grid_cells,effective_cells}` for
# the surface this feature exposes.
metrics = []

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4", features = ["derive"] }

# wasm-bindgen + JS-backed getrandom only apply to the browser target
# (`wasm32-unknown-unknown`). The WASI target (`wasm32-wasip1`) gets its
# entropy and JS-less I/O from the WASI host directly, and would reject
# wasm-bindgen at link time.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optimize wasm payload size when built via `wasm-pack build --release`.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# Disable wasm-opt — the bundled binary is older than the bulk-memory
# opcodes rustc now emits by default, and runs `wasm-opt` as a validation
# step even when there's no optimization to do. rustc's own `-O` already
# covers the low-hanging optimizations.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

